# deep-forecast

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: Run_in_Colab.ipynb
src/deepforecast/: __init__.py  cli.py  data.py  dataset.py  forecast.py  losses.py  metrics.py  model.py  train.py
tests/: test_data_and_dataset.py  test_model_and_losses.py  test_train_and_forecast.py
